--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,12 @@
 {
   "manifest_version": 3,
   "name": "17Lands Japanese Replacer",
-  "version": "1.2",
+  "version": "1.3",
+  "icons": {
+    "16": "16.png",
+    "48": "48.png",
+    "128": "128.png"
+  },
   "web_accessible_resources": [
     {
       "resources": [
